[gd_scene load_steps=7 format=2]

[ext_resource path="res://arena/Arena.gd" type="Script" id=1]
[ext_resource path="res://arena/Wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://arena/Obstacle.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

extents = Vector3( 100, 1, 100 )

[sub_resource type="PlaneMesh" id=2]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 50, 110 )
subdivide_width = 0
subdivide_depth = 0

[sub_resource type="PlaneMesh" id=3]

custom_aabb = AABB( 0, 0, 0, 0, 0, 0 )
size = Vector2( 10, 50 )
subdivide_width = 0
subdivide_depth = 0

[node name="arena" type="Spatial"]

script = ExtResource( 1 )

[node name="Wall" parent="." index="0" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 50, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Wall4" parent="." index="1" instance=ExtResource( 2 )]

transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, -50 )
_sections_unfolded = [ "Transform" ]

[node name="Wall2" parent="." index="2" instance=ExtResource( 2 )]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -50, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Wall3" parent="." index="3" instance=ExtResource( 2 )]

transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 50 )
_sections_unfolded = [ "Transform" ]

[node name="Floor" type="StaticBody" parent="." index="4"]

editor/display_folded = true
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
friction = 1.0
bounce = 0.0
constant_linear_velocity = Vector3( 0, 0, 0 )
constant_angular_velocity = Vector3( 0, 0, 0 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]

[node name="CollisionShape" type="CollisionShape" parent="Floor" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
shape = SubResource( 1 )
disabled = true
_sections_unfolded = [ "Transform" ]

[node name="MeshInstance" type="MeshInstance" parent="Floor" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 30, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MeshInstance3" type="MeshInstance" parent="Floor" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MeshInstance4" type="MeshInstance" parent="Floor" index="3"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -30 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 3 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="MeshInstance2" type="MeshInstance" parent="Floor" index="4"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -30, 0, 0 )
layers = 1
material_override = null
cast_shadow = 1
extra_cull_margin = 0.0
use_in_baked_light = false
lod_min_distance = 0.0
lod_min_hysteresis = 0.0
lod_max_distance = 0.0
lod_max_hysteresis = 0.0
mesh = SubResource( 2 )
skeleton = NodePath("..")
material/0 = null
_sections_unfolded = [ "Transform", "Visibility" ]

[node name="Obstacle" parent="." index="5" instance=ExtResource( 3 )]

transform = Transform( 5, 0, 0, 0, 3, 0, 0, 0, 5, 30, 1, 30 )

[node name="Obstacle3" parent="." index="6" instance=ExtResource( 3 )]

transform = Transform( 5, 0, 0, 0, 3, 0, 0, 0, 5, 30, 1, -30 )

[node name="Obstacle2" parent="." index="7" instance=ExtResource( 3 )]

transform = Transform( 5, 0, 0, 0, 3, 0, 0, 0, 5, -30, 1, 30 )

[node name="Obstacle4" parent="." index="8" instance=ExtResource( 3 )]

transform = Transform( 5, 0, 0, 0, 3, 0, 0, 0, 5, -30, 1, -30 )


